--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^29.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.17",
+    "postcss-import": "^15.0.0",
     "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
