--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "tableturf-battle",
+  "name": "tableturf-battle-card-create",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "build": "NODE_ENV=production webpack --config webpack.prod.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
     "serve": "webpack serve --open --config webpack.dev.js"
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
+    "@types/mustache": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "autoprefixer": "^10.4.12",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
     "eslint": "^8.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.0.3",
     "mini-css-extract-plugin": "^2.6.1",
@@ -34,5 +37,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "mustache": "^4.2.0"
   }
 }
