--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "analyze":"cross-env NODE_ENV=production webpack --config webpack.prod.js --analyze",
     "serve": "webpack serve --open --config webpack.dev.js"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
