--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "jest",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "analyze":"cross-env NODE_ENV=production webpack --config webpack.prod.js --analyze",
-    "serve": "webpack serve --open --config webpack.dev.js"
+    "analyze": "cross-env NODE_ENV=production webpack --config webpack.prod.js --analyze",
+    "serve": "webpack serve --open --config webpack.dev.js",
+    "start": "http-server dist"
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
@@ -21,9 +22,11 @@
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.13",
     "eslint": "^8.25.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "jest": "^29.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.17",
@@ -38,7 +41,10 @@
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-sw": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
     "mustache": "^4.2.0"
