--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "mustache": "^4.2.0"
   }
 }
