--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
     "test": "jest",
     "dev": "vite --host",
     "build": "tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "webpack-build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "webpack-build:stage": "cross-env NODE_ENV=production webpack --config webpack.stage.js",
-    "webpack-analyze": "cross-env NODE_ENV=production webpack --config webpack.prod.js --analyze",
-    "webpack-serve": "webpack serve --open --config webpack.dev.js",
-    "webpack-start": "http-server dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
@@ -22,36 +17,16 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.16",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "cssnano": "^6.0.3",
     "eslint": "^8.56.0",
-    "fork-ts-checker-webpack-plugin": "^9.0.2",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "http-server": "^14.1.1",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.7",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
-    "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
-    "vite-plugin-pwa": "^0.19.0",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-pwa-manifest": "^4.0.0",
-    "workbox-sw": "^7.0.0",
-    "workbox-webpack-plugin": "^7.0.0"
+    "vite-plugin-pwa": "^0.19.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
