--- a/package.json
+++ b/package.json
@@ -5,28 +5,28 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "test": "jest",
+    "test": "vitest --watch --ui",
     "dev": "vite --host",
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
     "@types/mustache": "^4.2.5",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.18.1",
+    "@vitest/coverage-v8": "^1.3.0",
+    "@vitest/ui": "^1.3.0",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
-    "jest": "^29.7.0",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
     "tailwindcss": "^3.4.0",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
-    "vite-plugin-pwa": "^0.19.0"
+    "vite-plugin-pwa": "^0.19.0",
+    "vitest": "^1.3.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
