chore: setting prettier

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,9 +6,5 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "vite.config.ts",
-    "vitest.config.ts",
-    "plugins"
-  ]
+  "include": ["vite.config.ts", "vitest.config.ts", "plugins"]
 }
