--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "vitest --watch --ui",
-    "lint": "eslint ."
+    "format": "prettier --write '**/*.{pcss,html.mustache,ts,js,cjs,html}'",
+    "check:lint": "eslint .",
+    "check:format": "prettier --check '**/*.{pcss,html.mustache,ts,js,cjs,html}'"
   },
   "devDependencies": {
     "@types/mustache": "^4.2.5",
@@ -23,6 +25,8 @@
     "eslint": "^8.56.0",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
