--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+.nyc_output
+/*-coverage/
