--- a/package.json
+++ b/package.json
@@ -7,29 +7,41 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc --noEmit && vite build",
+    "clean": "rimraf dist",
     "preview": "vite preview",
-    "test": "vitest --watch --ui",
+    "test:unit": "vitest",
+    "test:unit:debug": "vitest --ui",
+    "test:unit-coverage": "vitest --watch=false --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:debug": "playwright test --ui",
+    "test:e2e-coverage": "rimraf playwright-coverage; cross-env CI=true coverage=1 playwright test; nyc report --reporter=lcov --temp-dir=playwright-coverage --report-dir=playwright-coverage",
     "format": "prettier --write '**/*.{pcss,html.mustache,ts,js,cjs,html}'",
     "check:lint": "eslint .",
     "check:format": "prettier --check '**/*.{pcss,html.mustache,ts,js,cjs,html}'"
   },
   "devDependencies": {
+    "@lcov-viewer/istanbul-report": "^1.4.0",
+    "@playwright/test": "^1.41.2",
     "@types/mustache": "^4.2.5",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.18.1",
-    "@vitest/coverage-v8": "^1.3.0",
+    "@vitest/coverage-istanbul": "^1.3.0",
     "@vitest/ui": "^1.3.0",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
+    "nyc": "^15.1.0",
+    "playwright-test-coverage": "^1.2.12",
     "postcss": "^8.4.33",
     "postcss-import": "^16.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
+    "vite-plugin-istanbul": "^5.0.0",
     "vite-plugin-pwa": "^0.19.0",
     "vitest": "^1.3.0"
   },
