--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,11 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "include": ["vite.config.ts", "vitest.config.ts", "plugins"]
+  "include": [
+    "vite.config.ts",
+    "vitest.config.ts",
+    "plugins"
+  ]
 }
