--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npm run test:unit-coverage
+      run: npm run test:e2e-coverage
     - uses: actions/upload-artifact@v4
       if: always()
       with:
