--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc --noEmit && vite build",
+    "build:coverage": "tsc --noEmit && cross-env CI=true coverage=1 vite build",
     "clean": "rimraf dist",
+    "clean:e2e-coverage": "rimraf playwright-coverage",
     "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:unit:debug": "vitest --ui",
-    "test:unit-coverage": "vitest --watch=false --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:debug": "playwright test --ui",
-    "test:e2e-coverage": "rimraf playwright-coverage; cross-env CI=true coverage=1 playwright test; nyc report --reporter=lcov --temp-dir=playwright-coverage --report-dir=playwright-coverage",
+    "test": "vitest",
+    "test:debug": "vitest --ui",
+    "test:coverage": "vitest --watch=false --coverage",
+    "e2e:pc": "playwright test -c playwright.pc.config.ts",
+    "e2e:mobile": "playwright test -c playwright.mobile.config.ts",
+    "e2e:pc:debug": "playwright test --ui -c playwright.pc.config.ts",
+    "e2e:mobile:debug": "playwright test --ui -c playwright.mobile.config.ts",
+    "e2e:pc:coverage": "cross-env CI=true coverage=1 playwright test -c playwright.pc.config.ts",
+    "e2e:mobile:coverage": "cross-env CI=true coverage=1 playwright test -c playwright.mobile.config.ts",
+    "e2e:report": "nyc report --reporter=lcov --temp-dir=playwright-coverage --report-dir=playwright-coverage",
     "format": "prettier --write '**/*.{pcss,html.mustache,ts,js,cjs,html}'",
     "check:lint": "eslint .",
     "check:format": "prettier --check '**/*.{pcss,html.mustache,ts,js,cjs,html}'"
