--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,9 +1,9 @@
 name: Run Tests
 on:
-  push:
-    branches: [ main, master ]
   pull_request:
-    branches: [ main, master ]
+    branches: 
+      - main
+  workflow_call:
 jobs:
   test-runner:
     timeout-minutes: 60
