--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "build:coverage": "tsc --noEmit && cross-env CI=true coverage=1 vite build",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
     "clean": "rimraf dist",
     "clean:e2e-coverage": "rimraf playwright-coverage",
     "preview": "vite preview",
@@ -28,6 +29,8 @@
   "devDependencies": {
     "@lcov-viewer/istanbul-report": "^1.4.0",
     "@playwright/test": "^1.41.2",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tsconfig/svelte": "^5.0.2",
     "@types/mustache": "^4.2.5",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
@@ -44,7 +47,10 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "rimraf": "^5.0.5",
+    "svelte": "^4.2.12",
+    "svelte-check": "^3.6.8",
     "tailwindcss": "^3.4.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
     "vite-plugin-istanbul": "^5.0.0",
