--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,8 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "bundler",
+    "strict": true
   },
   "include": [
     "vite.config.ts",
