--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -24,8 +24,26 @@ jobs:
       run: npm run test:coverage
     - name: Check build (and for coverage report)
       run: npm run build:coverage
-    - name: Install Playwright Browsers
+    - name: Get installed Playwright version
+      id: playwright-version
+      run: echo "PlaywrightVersion=$(npm ll --depth=0 -p @playwright/test | grep -o '@[0-9].*')" >> "$GITHUB_OUTPUT"
+    - name: Cache Playwright binaries
+      id: playwright-cache
+      uses: actions/cache@v4
+      with:
+        # see https://playwright.dev/docs/browsers#managing-browser-binaries
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.PlaywrightVersion }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
+    # Install Playwright Browsers with dependencies
+    - name: Install Playwright Browsers with dependencies
+      if: steps.playwright-cache.outputs.cache-hit != 'true'
       run: npx playwright install --with-deps
+    # Install Playwright's OS specific dependencies (e.g. xvfb)
+    - name: Install Playwright's dependencies
+      if: steps.playwright-cache.outputs.cache-hit == 'true'
+      run: npx playwright install-deps
     - name: Run Playwright tests (PC)
       run: npm run e2e:pc:coverage
     - name: Run Playwright tests (mobile)
