chore(config): add helper to pin GitHub Action digests in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,7 @@
     ":timezone(Asia/Tokyo)",
     ":prHourlyLimitNone",
     ":automergeRequireAllStatusChecks",
+    "helpers:pinGitHubActionDigests",
     "schedule:weekends"
   ],
   "dependencyDashboard": true,
