--- a/package.json
+++ b/package.json
@@ -28,23 +28,22 @@
   "devDependencies": {
     "@lcov-viewer/istanbul-report": "^1.4.0",
     "@playwright/test": "^1.41.2",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/mustache": "^4.2.5",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-istanbul": "^3.0.0",
     "@vitest/ui": "^3.0.0",
-    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
     "nyc": "^17.0.0",
     "playwright-test-coverage": "^1.2.12",
     "postcss": "^8.4.33",
-    "postcss-import": "^16.0.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.3.3",
     "vite": "^6.0.9",
     "vite-plugin-istanbul": "^7.0.0",
