--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@lcov-viewer/istanbul-report": "^1.4.0",
     "@playwright/test": "^1.41.2",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.6",
     "@types/mustache": "^4.2.5",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -39,7 +39,6 @@
     "eslint": "^9.0.0",
     "nyc": "^17.0.0",
     "playwright-test-coverage": "^1.2.12",
-    "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "rimraf": "^6.0.0",
