chore: reduce timeout for test runner and deployment jobs; update build scripts

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -9,6 +9,7 @@ jobs:
   Deploy:
     needs:
       - Test
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - name: Call Endpoint
