--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -6,7 +6,7 @@ on:
   workflow_call:
 jobs:
   test-runner:
-    timeout-minutes: 60
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
@@ -20,6 +20,8 @@ jobs:
       run: npm run check:lint
     - name: Check format
       run: npm run check:format
+    - name: Check types
+      run: npm run check:types
     - name: Run vitest tests
       run: npm run test:coverage
     - name: Check build (and for coverage report)
