chore: update dependencies and remove unused packages

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "build:coverage": "cross-env CI=true coverage=1 vite build",
-    "clean": "rimraf dist",
-    "clean:e2e-coverage": "rimraf playwright-coverage",
+    "build:coverage": "CI=true coverage=1 vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:debug": "vitest --ui",
@@ -18,8 +16,8 @@
     "e2e:mobile": "playwright test -c playwright.mobile.config.ts",
     "e2e:pc:debug": "playwright test --ui -c playwright.pc.config.ts",
     "e2e:mobile:debug": "playwright test --ui -c playwright.mobile.config.ts",
-    "e2e:pc:coverage": "cross-env CI=true coverage=1 playwright test -c playwright.pc.config.ts",
-    "e2e:mobile:coverage": "cross-env CI=true coverage=1 playwright test -c playwright.mobile.config.ts",
+    "e2e:pc:coverage": "CI=true coverage=1 playwright test -c playwright.pc.config.ts",
+    "e2e:mobile:coverage": "CI=true coverage=1 playwright test -c playwright.mobile.config.ts",
     "e2e:report": "nyc report --reporter=lcov --temp-dir=playwright-coverage --report-dir=playwright-coverage",
     "format": "prettier --write '**/*.{css,html.mustache,ts,js,cjs,html}'",
     "check:lint": "eslint .",
@@ -36,15 +34,13 @@
     "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-istanbul": "^3.0.0",
     "@vitest/ui": "^3.0.0",
-    "cross-env": "^7.0.3",
     "eslint": "^9.0.0",
     "nyc": "^17.0.0",
     "playwright-test-coverage": "^1.2.12",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "rimraf": "^6.0.0",
     "tailwindcss": "^4.0.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.0",
     "vite": "^6.0.9",
     "vite-plugin-istanbul": "^7.0.0",
     "vite-plugin-pwa": "^1.0.0",
