--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       ]
     },
     "sourceMap": true,
+    "types": ["vite/client"],
     "outDir": "publish/js",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
